VLC crashes with yadif deinterlacer
On Windows XP, VLC nightly(1.2/1.3) win32 crashes when enabling yadif deinterlacer.
This isssue doesn't happen on Windows 7 64bit with VLC nightly win32/win64.
On Windows XP, VLC nightly(1.2/1.3) win32 crashes when enabling yadif deinterlacer.
This isssue doesn't happen on Windows 7 64bit with VLC nightly win32/win64.
Added attachment:
added Status::fixed label
closed
The old patch, I sent to vlc-devel ML yesterday, didn't help the crash on Windows XP 32bit.
I was wrong that I tested with the module that was compiled with a different patch.
So I made a new patch and tested again (before applying old patch, after applying old patch, after applying new patch):
It's all OK with the new patch. But as jb mentioned on the ML few days ago, compiler warnings appear again on 32bit builds both Windows and Linux.
Added attachment:
VideoLAN code repository instance