Use force_align_arg_pointer for yadif crash on Windows XP

This patch affects only on MinGW win32 builds.
Fixes #5793.

Signed-off-by: Rafaël Carré <funman@videolan.org>