modules/video_filter/deinterlace/yadif_template.h
@@ -106,6 +106,9 @@
             "por       "MM"5, "MM"3 \n\t"\
             MOVQ"      "MM"3, "MM"1 \n\t"
 
+#if defined(__MINGW32__) && defined(WIN32) && !defined(WIN64)
+__attribute__((__force_align_arg_pointer__))
+#endif
 VLC_TARGET static void RENAME(yadif_filter_line)(uint8_t *dst,
                               uint8_t *prev, uint8_t *cur, uint8_t *next,
                               int w, int prefs, int mrefs, int parity, int mode)
